...
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Restaurant Name"
                android:id="@+id/restaurantNameTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

...
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/saveRestaurantButton"
                android:paddingLeft="30dp"
                android:paddingTop="20dp"
                android:paddingRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
...
