<resources>
    <string name="app_name">EatAt</string>
    <string name="consumer_key">Ff0bl-DWFbE7JK45ySVbjA</string>
    <string name="consumer_secret">LK-Jo3xThz5WI9tsPN0AfWNu64I</string>
    <string name="token">n8a_AgXu11ewsHFL7c9KlqDMTIHa9-RM</string>
    <string name="token_secret">IbJzvf4vhUsRicBOWv64t569mR4</string>

    <string name="preference_file_key">com.epicodus.myrestaurants.PREFERENCE_FILE_KEY</string>
    <string name="firebase_url">https://myres.firebaseio.com</string>
    <string name="list_draggable_image_placeholder_description">Image of restaurant</string>
    <string name="restaurant_list_rating">"Rating: %d/5"</string>
    <string name="restaurant_saved">Restaurant Saved</string>
</resources>
